[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/kinematic/meshnpc.tscn" type="PackedScene" id=1]
[ext_resource path="res://asset/sounds/tac1.wav" type="AudioStream" id=2]
[ext_resource path="res://scenes/gta/relativfps.gd" type="Script" id=3]

[sub_resource type="CylinderShape" id=1]
height = 2.98668
radius = 0.707169

[sub_resource type="SphereShape" id=2]
radius = 60.0

[sub_resource type="SphereShape" id=3]
radius = 4.27004

[sub_resource type="SphereShape" id=4]
radius = 1.5242

[node name="relativfps" type="KinematicBody"]
collision_layer = 3
collision_mask = 3
script = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.57273, 0 )
shape = SubResource( 1 )

[node name="mesh" parent="." instance=ExtResource( 1 )]
transform = Transform( -0.2, 0, -1.74846e-08, 0, 0.2, 0, 1.74846e-08, 0, -0.2, 0, 0, 0 )

[node name="weaponsound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="Areatoofar" type="Area" parent="."]
collision_layer = 6
collision_mask = 6
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="Areatoofar"]
shape = SubResource( 2 )

[node name="Areaclose" type="Area" parent="."]
collision_layer = 6
collision_mask = 6
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="Areaclose"]
shape = SubResource( 3 )

[node name="Areacac" type="Area" parent="."]
collision_layer = 6
collision_mask = 6
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="Areacac"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.54151, 0 )
shape = SubResource( 4 )

[connection signal="body_entered" from="mesh/Armature/Bone/Bone001/Bone003/Bone004/Bone005/handr/Areapunch" to="." method="_on_Areapunch_body_entered"]
[connection signal="body_entered" from="mesh/Armature/Bone/Bone001/Bone003/Bone004/Bone005/bat/Areabat" to="." method="_on_Areabat_body_entered"]
[connection signal="body_entered" from="Areaclose" to="." method="_on_Areaclose_body_entered"]
[connection signal="body_exited" from="Areaclose" to="." method="_on_Areaclose_body_exited"]
[connection signal="body_entered" from="Areacac" to="." method="_on_Areacac_body_entered"]
[connection signal="body_exited" from="Areacac" to="." method="_on_Areacac_body_exited"]

[editable path="mesh"]
